// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div>
    <div
      class="rh-card rh-card--raised rh-card--pad-md"
    >
      <div
        class="rh-card__header"
      >
        <span
          class="rh-badge rh-badge--md rh-badge--status-candidate"
          data-status="candidate"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-dashed rh-icon"
            data-icon="circle-dashed"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.1 2.182a10 10 0 0 1 3.8 0"
            />
            <path
              d="M13.9 21.818a10 10 0 0 1-3.8 0"
            />
            <path
              d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
            />
            <path
              d="M2.182 13.9a10 10 0 0 1 0-3.8"
            />
            <path
              d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
            />
            <path
              d="M21.818 10.1a10 10 0 0 1 0 3.8"
            />
            <path
              d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
            />
            <path
              d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Candidate
          </span>
        </span>
      </div>
      <div
        class="rh-card__body"
      >
        A claim awaiting review.
      </div>
      <div
        class="rh-card__footer"
      >
        <span>
          C0041
        </span>
      </div>
    </div>
    <div
      class="rh-card rh-card--pane rh-card--pad-sm rh-card--hoverable"
    >
      <div
        class="rh-card__body"
      >
        A pane card.
      </div>
    </div>
    <div
      class="rh-card rh-card--paper rh-card--pad-lg rh-surface-paper"
    >
      <div
        class="rh-card__body"
      >
        A page of a source.
      </div>
    </div>
  </div>
</div>
`;

exports[`Card theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div>
    <div
      class="rh-card rh-card--raised rh-card--pad-md"
    >
      <div
        class="rh-card__header"
      >
        <span
          class="rh-badge rh-badge--md rh-badge--status-candidate"
          data-status="candidate"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-dashed rh-icon"
            data-icon="circle-dashed"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.1 2.182a10 10 0 0 1 3.8 0"
            />
            <path
              d="M13.9 21.818a10 10 0 0 1-3.8 0"
            />
            <path
              d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
            />
            <path
              d="M2.182 13.9a10 10 0 0 1 0-3.8"
            />
            <path
              d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
            />
            <path
              d="M21.818 10.1a10 10 0 0 1 0 3.8"
            />
            <path
              d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
            />
            <path
              d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Candidate
          </span>
        </span>
      </div>
      <div
        class="rh-card__body"
      >
        A claim awaiting review.
      </div>
      <div
        class="rh-card__footer"
      >
        <span>
          C0041
        </span>
      </div>
    </div>
    <div
      class="rh-card rh-card--pane rh-card--pad-sm rh-card--hoverable"
    >
      <div
        class="rh-card__body"
      >
        A pane card.
      </div>
    </div>
    <div
      class="rh-card rh-card--paper rh-card--pad-lg rh-surface-paper"
    >
      <div
        class="rh-card__body"
      >
        A page of a source.
      </div>
    </div>
  </div>
</div>
`;

exports[`Card theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div>
    <div
      class="rh-card rh-card--raised rh-card--pad-md"
    >
      <div
        class="rh-card__header"
      >
        <span
          class="rh-badge rh-badge--md rh-badge--status-candidate"
          data-status="candidate"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-dashed rh-icon"
            data-icon="circle-dashed"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.1 2.182a10 10 0 0 1 3.8 0"
            />
            <path
              d="M13.9 21.818a10 10 0 0 1-3.8 0"
            />
            <path
              d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
            />
            <path
              d="M2.182 13.9a10 10 0 0 1 0-3.8"
            />
            <path
              d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
            />
            <path
              d="M21.818 10.1a10 10 0 0 1 0 3.8"
            />
            <path
              d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
            />
            <path
              d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Candidate
          </span>
        </span>
      </div>
      <div
        class="rh-card__body"
      >
        A claim awaiting review.
      </div>
      <div
        class="rh-card__footer"
      >
        <span>
          C0041
        </span>
      </div>
    </div>
    <div
      class="rh-card rh-card--pane rh-card--pad-sm rh-card--hoverable"
    >
      <div
        class="rh-card__body"
      >
        A pane card.
      </div>
    </div>
    <div
      class="rh-card rh-card--paper rh-card--pad-lg rh-surface-paper"
    >
      <div
        class="rh-card__body"
      >
        A page of a source.
      </div>
    </div>
  </div>
</div>
`;

exports[`Card theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div>
    <div
      class="rh-card rh-card--raised rh-card--pad-md"
    >
      <div
        class="rh-card__header"
      >
        <span
          class="rh-badge rh-badge--md rh-badge--status-candidate"
          data-status="candidate"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-dashed rh-icon"
            data-icon="circle-dashed"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.1 2.182a10 10 0 0 1 3.8 0"
            />
            <path
              d="M13.9 21.818a10 10 0 0 1-3.8 0"
            />
            <path
              d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
            />
            <path
              d="M2.182 13.9a10 10 0 0 1 0-3.8"
            />
            <path
              d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
            />
            <path
              d="M21.818 10.1a10 10 0 0 1 0 3.8"
            />
            <path
              d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
            />
            <path
              d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Candidate
          </span>
        </span>
      </div>
      <div
        class="rh-card__body"
      >
        A claim awaiting review.
      </div>
      <div
        class="rh-card__footer"
      >
        <span>
          C0041
        </span>
      </div>
    </div>
    <div
      class="rh-card rh-card--pane rh-card--pad-sm rh-card--hoverable"
    >
      <div
        class="rh-card__body"
      >
        A pane card.
      </div>
    </div>
    <div
      class="rh-card rh-card--paper rh-card--pad-lg rh-surface-paper"
    >
      <div
        class="rh-card__body"
      >
        A page of a source.
      </div>
    </div>
  </div>
</div>
`;
